# csharp_rs

./: Cargo.toml  Program.cs  README.md  Rust.cs  rsdotnet.cmd  rsdotnet.sh  rsdotnetrel.cmd  rsdotnetrel.sh
src/: lib.rs
