[package]
name = "csharp_rs"
version = "0.1.0"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "libcsharp_rs"

[dependencies]
num_cpus = "1.13.0"
ryu = "1.0.5"

[profile.release]
lto = true
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
